# inmem-elf-loader

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  loader.ld
.github/workflows/: check.yml
include/: asm.h  elfs.h  syscalls.h  utils.h
src/: loader.c  loader.ld  syscalls.c  utils.c
src/arch/i386/: syscall.S  trampo.S
src/arch/x86_64/: syscall.S  trampo.S
tests/: CMakeLists.txt  config.py  requirements.txt  test-echo.py  utils.py
tests/c/: CMakeLists.txt  test-echo.c
tests/cpp/: CMakeLists.txt  test-echo.cpp
tests/go/: CMakeLists.txt  test-echo.go
